Adding fulfilled checkbox for orders

--- a/.gitignore
+++ b/.gitignore
@@ -29,8 +29,10 @@ npm-debug.log
 /assets/node_modules/
 
 # Since we are building assets from assets/,
-# we ignore priv/static. You may want to comment
+# we ignore priv/static. You may~ want to comment
 # this depending on your deployment strategy.
 /priv/static/
 
 /config/
+
+.DS_Store
